# python_selenium_po_demo

./: README.md  config.py  demo.py  pyproject.toml
pages/: __init__.py  base_page.py  cart_page.py  login_page.py  products_page.py
reports/: report.html
tests/: conftest.py  test_cart.py  test_e2e.py  test_login.py  test_products.py
