[project]
name = "selenium-po-demo"
version = "0.1.0"
description = "Selenium Page Object Model Demo"
requires-python = ">=3.8"
dependencies = [
    "selenium>=4.15.0",
    "pytest>=7.4.0",
    "pytest-html>=3.2.0",
    "webdriver-manager>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pytest-cov"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--html=reports/report.html --self-contained-html"

[tool.black]
line-length = 88
target-version = ['py38']